# hero-research

wdr_26_sp_2-main/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  autostart.sh  compile_commands.json  readme.md
wdr_26_sp_2-main/calibration/: calibrate_camera.cpp  calibrate_handeye.cpp  calibrate_robotworld_handeye.cpp  capture.cpp
wdr_26_sp_2-main/configs/: calibration.yaml  camera.yaml  demo.yaml  demo_rw.yaml  doubleyaw_test.yaml  sentry.yaml  standard3.yaml  standard_rw.yaml
wdr_26_sp_2-main/io/: CMakeLists.txt  camera.cpp  camera.hpp
wdr_26_sp_2-main/io/blueteeth/: blueteeth.cpp  blueteeth.hpp
wdr_26_sp_2-main/io/gimbal/: gimbal.cpp  gimbal.hpp
wdr_26_sp_2-main/io/hikrobot/: hikrobot.cpp  hikrobot.hpp
wdr_26_sp_2-main/io/ros2/: publish2nav.cpp  publish2nav.hpp  ros2.cpp  ros2.hpp  subscribe2nav.cpp  subscribe2nav.hpp  visualization.cpp
wdr_26_sp_2-main/src/: auto_aim_debug_mpc.cpp  auto_buff_debug_mpc.cpp  mt_auto_aim_debug.cpp  mt_standard.cpp  sentry_ul.cpp  standard.cpp  standard_mpc.cpp  uav_debug.cpp
wdr_26_sp_2-main/tasks/auto_aim/: CMakeLists.txt  aimer.cpp  aimer.hpp  armor.hpp  detector.cpp  detector.hpp  rw_tracker.cpp  rw_tracker.hpp  shooter.cpp  shooter.hpp  solver.cpp  solver.hpp  target.cpp  target.hpp  tracker.cpp  tracker.hpp
wdr_26_sp_2-main/tasks/auto_aim/multithread/: commandgener.cpp  commandgener.hpp
wdr_26_sp_2-main/tasks/auto_aim/planner/: planner.cpp  planner.hpp
wdr_26_sp_2-main/tests/: auto_aim_test.cpp  auto_rwaim_test.cpp  camera_bayerdetect_test.cpp  camera_detect_test.cpp  camera_test.cpp  detector_video_test.cpp  gamma_test.cpp  gimbal_response_test.cpp  gimbal_test.cpp  latency_test.cpp  minimum_vision_system.cpp  mt_rw_tracker_test.cpp  planner_doubleyaw_test_offline.cpp  planner_test_offline.cpp  publish_test.cpp  rw_aim_test.cpp  rw_tracker_test.cpp
wdr_26_sp_2-main/tools/: CMakeLists.txt  exiter.cpp  exiter.hpp  extended_kalman_filter.cpp  extended_kalman_filter.hpp  lock_free_snapshot.hpp  thread_safe_queue.hpp  timer.hpp  trajectory.cpp  trajectory.hpp
wdr_26_sp_2-main/tools/other/: convert.py  gdb_extract_traj.py  gdb_traj.sh  gimbal.py  latency_test.py  visualize_traj.py
wdr_26_sp_2-main/wdr_msgs/msg/: nav_ul.msg
